--- a/style.css
+++ b/style.css
@@ -132,6 +132,15 @@ p {
     color: white;
     font-size: 3rem;
     padding: 1%;
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+
+#proj:hover {
+    color:#fc6399;
+    font-size:3.1rem;
+    transition: .2s;
 }
 
 .footer {
