--- a/style.css
+++ b/style.css
@@ -7,15 +7,13 @@ body {
     background-color:#202020 !important;
     color: white !important;
     width: auto;
-    padding-top: 70px;
-    padding-bottom: 50px;
 }
 
 /* Top Navbar */
 
 .navbar {
     background-color: #101010 !important;
-    color: white !important;
+    margin-bottom: 0 !important;
 }
 
 .navbar-brand {
@@ -24,7 +22,7 @@ body {
 }
 
 .navbar-brand:hover {
-    background: #121FCF;
+    background: white;
     background: linear-gradient(to right, #FF87B9, #E7AAFF, #99A4FF);
     -webkit-background-clip: text;
     background-clip: text;
@@ -66,17 +64,35 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    align-items: center;
+    align-items: left;
+    border: 0px;
 }
 
-.hero-text {
-    font-size: 7em;
+#hero-section {
+    padding-left: 5%;
+}
+
+#hero-head {
+    font-size: 8em;
+    font-weight: bold;
+    background: linear-gradient(to right, #FF87B9 5%, #E7AAFF 25%, #99A4FF);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: left;
 }
 
 #hero-home {
     height: 100%;
     width: auto;
     animation: fadein 1s;
+    /* background: linear-gradient(25deg, #845ec2 25%, #d65db1 75%, #ff6f91); */
+    background: #202020;
+}
+
+#hero-text {
+    font-size: 1.5em;
+    text-align: left;
 }
 
 @keyframes fadein {
@@ -101,6 +117,37 @@ body {
 }
 
 
+/* About */
+#about {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+}
+
+#mypic {
+    overflow: auto;
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    padding: 5%;
+}
+
+#intro {
+    padding: 2%;
+    overflow: auto;
+}
+
+#hello {
+    color: #FF87B9;
+    font-size: 4em;
+}
+
+p {
+    font-size: 1.2em;
+}
+
 /* Footer */
 
 .navbar-expand-lg {
@@ -119,218 +166,38 @@ h3 {
 /* Screen Responsiveness */
 
 @media (max-width: 480px) {
-    .hero-text {
-        font-size: 4em;
+    .hero-head {
+        font-size: 3.5em;
     }
+    #about {
+        flex-direction: column;
+    }
+    #mypic {
+        height: 50vh;
+        width: auto;
+        padding: 0;
+    }
+
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-    .hero-text {
+    .hero-head {
         font-size: 5em;
+    }
+
+    #hello {
+        font-size: 3em;
     }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .hero-text {
+    .hero-head {
         font-size: 5.5em;
     }
 }
 
 @media (min-width: 1025px) and (max-width: 1200px) {
-    .hero-text {
+    .hero-head {
         font-size: 6.5em;
     }
 }
-
-/*
-body {
-    height: 100%;
-    line-height: normal;
-    background-image: linear-gradient(to bottom, #611C31, #4c3254, #31435c)
-}
-
-.navbar-brand:hover {
-    color: #ff729a !important;
-    transition: .2s;
-}
-
-.nav-link {
-    color: white !important;
-}
-
-.navbar-toggler {
-    border: 0cm !important;
-}
-
-li {
-    padding-right: 15px;
-}
-
-.navbar {
-    background-color: #611c31;
-    color: white;
-}
-
-.nav-link {
-    font-family: Helvetica, sans-serif, sans-serif !important;
-    font-size: 1.4rem;
-}
-
-.nav-link:hover {
-    color: #fc6399 !important;
-    transition: .2s;
-}
-
-#my-pic {
-    border: 5px solid white;
-    border-radius:50%;
-    width: 75%;
-}
-
-#cont {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-#name {
-    color: white;
-    font-size: 8rem;
-    font-family: 'Zen Antique', serif;
-    font-weight: bold;
-    text-align: center;
-}
-
-#desc {
-    font-size: 2em;
-    text-align: center;
-    font-weight: bold;
-    color: white;
-    font-family: 'Zen Antique', serif;
-}
-
-#home {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-content: center;
-    margin-bottom:10%;
-}
-
-#about {
-    width: 100%;
-    height:auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 10%;
-    padding: 5%;
-}
-
-#hi {
-    font-size: 3.5rem;
-    font-family: 'Zen Antique', serif;
-    font-weight: bold;
-    text-align: left;
-    display:block;
-    color: white;
-}
-
-#about-me {
-    font-size:1.5rem;
-    text-align: left;
-    display: block;
-    color:white;
-
-}
-
-#portfolio {
-    margin-top: 5%;
-    padding:5%;
-}
-
-#port {
-    font-size: 5rem;
-    font-family: 'Zen Antique', serif;
-    font-weight: bold;
-    text-align: center;
-    display:block;
-    color: white;
-}
-
-p {
-    color:white;
-    font-size:1.3rem;
-    text-align: center;
-}
-
-.projects {
-    display: block;
-    text-align: center;
-}
-
-#proj {
-    color: white;
-    font-size: 3rem;
-    padding: 1%;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-}
-
-#proj:hover {
-    color:#fc6399;
-    font-size:3.1rem;
-    transition: .2s;
-}
-
-.connect {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    font-size:2rem;
-}
-
-.fa {
-      color: white;
-}
-
-.fa:hover {
-      color:#fc6399;
-}
-
-.fa-github {
-    padding:20px 0 20px 0;
-}
-
-.proj-titles {
-    font-size: 5vw;
-    font-family: 'Zen Antique', serif;
-    font-weight: bold;
-    text-align: center;
-    color: white;
-}
-
-.port-cont {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    column-gap: 10%;
-    flex: 1;
-    align-items: space-around;
-}
-
-.port-boxes {
-    background-color: white;
-    border-radius: 25px;
-    text-align: center;
-    color: black;
-    display: flex;
-    flex-direction:column;
-    align-items: center;
-}
-
-
-
-
