--- a/style.css
+++ b/style.css
@@ -262,9 +262,10 @@ ul li {
 .repo-btn {
     background-color: #101010;
     color: white;
-    border-radius: 5%;
     padding: 2% 20% 2% 20%;
     font-size: 1em !important;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .repo-btn:hover {
@@ -282,10 +283,9 @@ ul li {
 
 /* Footer */
 
-.navbar-expand-lg {
+#contact {
     display: flex;
     flex-direction: column;
-    flex-wrap:nowrap;
     justify-content: center;
 }
 
@@ -302,10 +302,8 @@ h3 {
 .socials {
     display: flex;
     flex-direction: row;
-    flex-grow: 2%;
     align-items: center;
     justify-content: center;
-    height: auto;
 }
 
 .fa {
@@ -313,9 +311,9 @@ h3 {
     color: black !important;
     background-color: white !important;
     border-radius: 50% !important;
-    padding: 20%;
-    font-size: 1.5em !important;
-    margin: 10% 20% 10% 20%;
+    padding: 15px;
+    font-size: 20px !important;
+    margin: 10px 20px 10px 20px;
 }
 
 .fa:hover {
@@ -423,6 +421,23 @@ h3 {
         object-fit: contain;
     }
 
+    .fa {
+        font-size: 15px !important;
+        text-decoration: none !important;
+        padding: 15px;
+        margin: 10px;
+    }
+
+    h3 {
+        font-size: 1.2em !important
+    }
+
+    .socials {
+        width: auto;
+        object-fit: contain;
+    }
+
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -503,6 +518,17 @@ h3 {
 
     .repo-btn {
         object-fit: contain;
+    }
+
+    .fa {
+        font-size: 15px !important;
+        text-decoration: none !important;
+        padding: 15px;
+        margin: 10px;
+    }
+
+    h3 {
+        font-size: 1.2em !important
     }
 }
 
