--- a/style.css
+++ b/style.css
@@ -144,28 +144,32 @@ button {
     justify-content: center;
     text-align: left;
     padding: 5%;
+    height: 90vh;
 }
 
 #my-pic {
-    width: 20%;
+    width: 15%;
     height: auto;
     border-radius: 50%;
 }
 
 #about-title {
     color:#E7AAFF;
-    margin-top: 1%;
     font-weight: bold;
 }
 
 #about-desc {
     text-align: left !important;
-    margin: 1% 2% 0 2%;
+    margin: 0 2% 0 2%;
     font-size: 1.2em;
     padding: 0 10% 0 10%;
 }
 
 /* Experience */
+#experience {
+    height: 90vh;
+}
+
 .exp-proj-title {
     font-size: 4em;
     color: #E7AAFF;
@@ -206,6 +210,10 @@ ul li {
 }
 
 /* Projects */
+#projects {
+    height: 90vh;
+}
+
 .filter-section {
     display:flex;
     flex-direction: row;
@@ -332,6 +340,18 @@ h3 {
 */
 
 @media screen and (max-width: 480px) {
+    #about {
+        height: auto;
+    }
+
+    #experience {
+        height: auto;
+    }
+
+    #projects {
+        height: auto;
+    }
+
     #hero-home {
         justify-content: center;
         align-items: center;
@@ -351,7 +371,7 @@ h3 {
     }
 
     #hero-text {
-        font-size: 1.25em;
+        font-size: 1.25em !important;
         text-align: center;
     }
 
@@ -367,7 +387,7 @@ h3 {
 
     #about-desc {
         text-align: center;
-        font-size: 1em;
+        font-size: 1.2em;
     }
 
     h3 {
@@ -460,7 +480,7 @@ h3 {
     }
 
     #hero-text {
-        font-size: 1.5em;
+        font-size: 1.5em !important;
         text-align: center;
     }
 
@@ -477,7 +497,7 @@ h3 {
     }
 
     #about-desc{
-        font-size: 1em;
+        font-size: 1.3em;
     }
 
     .exp-proj-title {
