Fixed anchor link design issue.

--- a/style.css
+++ b/style.css
@@ -134,6 +134,13 @@ button {
     transition: .3s;
 }
 
+/* Anchor Span */
+.anchor {
+    display: block;
+    height: 50px;
+    margin-top: -50px;
+    visibility:hidden;
+}
 
 /* About */
 
@@ -143,12 +150,12 @@ button {
     align-items: center;
     justify-content: center;
     text-align: left;
-    padding: 5%;
-    height: 90vh;
+    padding: 2%;
+
 }
 
 #my-pic {
-    width: 15%;
+    width: 15% !important;
     height: auto;
     border-radius: 50%;
 }
@@ -167,42 +174,42 @@ button {
 
 /* Experience */
 #experience {
-    height: 90vh;
+    padding-left: 10% !important;  
+    padding-right: 10% !important;
+}
+
+.exp-title {
+    font-size:1.5em !important;
+    text-align: left !important;
 }
 
 .exp-proj-title {
     font-size: 4em;
     color: #E7AAFF;
     font-weight: bold;
-    margin-bottom: 2%;
 }
 
 #ennovar-exp {
     display: flex;
     flex-direction: column;
-    /* padding: 1% 10% 0 10%; */
     align-items: left;
     justify-content: center;
-    padding-left: 5%;
-    padding-right: 5%;
 }
 
 h2 {
     font-weight: bold !important;
     text-align: left !important;
-}
-
-.exp {
-    font-size: 1.5em;
+    font-size: 1.2em !important;
+    text-align: center !important;
 }
 
 .exp-date {
     font-style: italic;
-    font-size: 1.25em;
+    font-size: 1.2em;
 }
 
 ul li {
-    font-size: 1.25em !important;
+    font-size: 1.1em !important;
 }
 
 .position-title {
@@ -210,27 +217,6 @@ ul li {
 }
 
 /* Projects */
-#projects {
-    height: 90vh;
-}
-
-.filter-section {
-    display:flex;
-    flex-direction: row;
-    flex-wrap:nowrap;
-    width: 100%;
-    height: auto;
-    justify-content: space-around;
-}
-
-.filter-btn {
-    color: white !important;
-    border-radius: 0 !important;
-    background-color: #101010;
-    padding: 7%;
-    font-size: 1.2em !important;
-    margin-right: 10% !important;
-}
 
 .all-projects {
     margin: 3% 10% 5% 10%;
@@ -245,7 +231,6 @@ ul li {
     width: 30%;
     height: auto;
     color: black;
-    padding-bottom: 1%;
 }
 
 .proj-pic {
@@ -301,6 +286,7 @@ h3 {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin-top: 1% !important;
 }
 
 #host-credit {
@@ -377,11 +363,11 @@ h3 {
 
     #resume {
         font-size: 1em !important;
-        width: 75% !important;
+        width: 50% !important;
     }
 
     #my-pic {
-        width: 50%;
+        width: 40% !important;
         height: auto;
     }
 
@@ -492,7 +478,7 @@ h3 {
     }
 
     #my-pic {
-        width: 45%;
+        width: 30% !important;
         height: auto;
     }
 
@@ -550,6 +536,10 @@ h3 {
     h3 {
         font-size: 1.2em !important
     }
+
+    #resume {
+        width: 50%;
+    }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -569,7 +559,7 @@ h3 {
     }
 
     #my-pic {
-        width: 25%;
+        width: 25% !important;
         height: auto;
     }
 
