--- a/style.css
+++ b/style.css
@@ -233,9 +233,8 @@ ul li {
 .proj {
     background-color: white;
     width: 30%;
-    height: auto;
     color: black;
-    margin-bottom: 5%;
+    object-fit: contain;
 }
 
 .proj-pic {
@@ -261,11 +260,13 @@ ul li {
 .repo-btn {
     background-color: #101010;
     color: white;
-    padding: 0 15% 2% 15%;
-    margin-bottom: 5%;
+    padding: 1% 10%;
+    margin-bottom: 3%;
     font-size: 1em !important;
     text-decoration: none;
     font-weight: bold;
+    text-align: center;
+    width: 95%;
 }
 
 .repo-btn:hover {
@@ -580,6 +581,7 @@ h3 {
         width: 60%;
         height: 100%;
         padding-bottom: 2%;
+        margin-bottom: 5%;
     }
 
     .all-projects {
@@ -644,6 +646,7 @@ h3 {
     .proj {
         width: 60%;
         height: 100%;
+        margin-bottom: 5%;
     }
 
     .repo-btn {
