--- a/style.css
+++ b/style.css
@@ -326,12 +326,21 @@ h3 {
     transition: .3s;
 }
 
-/* UX Writing Samples temp class */
+/* UX Writing Samples */
 .UXsamples {
     width:auto;
     height:75%;
     margin: 4% 0;
 }
+
+h1 {
+    font-size: 4rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Technical Writing Samples */
+
+
 
 /* Screen Responsiveness 
 
