--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-    background-color:#202020 !important;
+    background-color:#202020;
     color: white !important;
     width: auto;
 }
@@ -144,7 +144,7 @@ button {
 
 /* About */
 
-#about {
+#abt {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -152,6 +152,7 @@ button {
     text-align: left;
     padding: 5%;
     margin-bottom:5%;
+    background-color:#202020;
 }
 
 #my-pic {
@@ -173,10 +174,12 @@ button {
 }
 
 /* Experience */
-#experience {
+#exp {
     padding-left: 10% !important;  
     padding-right: 10% !important;
     margin-bottom: 5% !important;
+    background-color:#202020;
+
 }
 
 .exp-title {
@@ -222,6 +225,9 @@ ul li {
 }
 
 /* Projects */
+#projects {
+    background-color:#202020;
+}
 
 .all-projects {
     display: grid;
@@ -327,6 +333,10 @@ h3 {
 }
 
 /* UX Writing Samples */
+#uxwriting {
+    background-color: #FFC8DD;
+}
+
 .UXsamples {
     width:auto;
     height:75%;
@@ -334,13 +344,20 @@ h3 {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 3.5rem;
+    text-align:center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Technical Writing Samples */
+#techwriting {
+    background-color: #E4CCF1;
+}
 
-
+/* Data Analytics */
+#dataanalytics {
+    background-color: #BDE0FE;
+}
 
 /* Screen Responsiveness 
 
